@@ -1,0 +1,9 @@
+<style>
+	body { color: red; }
+</style>
+
+@(Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, quo.) @{json(model)}
+
+<script type="text/javascript">
+	var a = 0;
+</script>
