@@ -1,5 +1,7 @@
 ======= 2.4.0 (BETA)
 
+- added: `components` more in docs
+
 - updated: new error message `The field "@" is invalid.`
 - updated: `NOSQL().insert(doc, [unique])`
 - updated: `quicksort` algorithm has been replaced for `shellsort` (increased performance of sorting about 10-15%)
